--- a/story/mystory.html
+++ b/story/mystory.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>My story</title>
+        <link href="mystory.css" rel="stylesheet">
     </head>
     <body>
         <h1>My Story</h1>
