--- a/story/mystory.html
+++ b/story/mystory.html
@@ -48,4 +48,11 @@
 
 window.initMap = initMap;
 </script>
+</head>
+<body>
+  <h1>Flights I took to get to Canada</h1>
+  <div id="map"></div>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly" async>
+  </script>
+</body>
 </html>
