--- a/story/mystory.html
+++ b/story/mystory.html
@@ -17,15 +17,27 @@
           margin: 0;
           padding: 0;
         }
-.space {
-    padding-left: 20px;
-}
+        .space {
+          padding-left: 20px;
+        }
+        h1 {
+          font-family: Arial, Helvetica, sans-serif;
+          color: #4F4F4B;
+          text-align: center;
+        }
+        h3 {
+          font-family: Arial, Helvetica, sans-serif;
+          color:#4F4F4B;
+          font-style: italic;
+          text-align: center;
+        }
     </style>
-<!-- JavaScript got too chunky, changed over to its own .js file -->
-<script src="mystory.js"></script>
-</head>
+    <!-- JavaScript got too chunky, changed over to its own .js file -->
+    <script src="mystory.js"></script>
+  </head>
 <body>
   <h1>Flights I took to get to Canada</h1>
+  <h3>On this page, you will find the flights I took from Dubai (DXB) to get to Saint John (YSJ) in 2018.</h3>
   <div id="map"></div>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-WWHYHIKY-do4kquMy9Z4wQaQx51AuE&callback=initMap&v=weekly" async>
   </script>
